--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vue-cdn-project</title>
+    <title>CDN-find</title>
+    <link rel="icon" type="image/png" href="./dist/logo.png" /><!--icon made by Freepik from www.flaticon.com-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="./src/assets/normalize.css">
   </head>
   <body>
     <div id="app"></div>
+
+    <footer></footer>
     <script src="/dist/build.js"></script>
   </body>
 </html>
